# concreteq

./: .gitignore  auth.go  coverage.baseline.out  coverage.html  coverage.out  coverage_final.html  coverage_report.txt  go.mod  go.sum  go.work  go.work.sum  handlers.go  handlers_auth.go  handlers_dlq_test.go  handlers_test.go  handlers_unimplemented_test.go  handlers_verification_test.go  integration_permission_test.go  integration_test.go  main.go  main_test.go  message_move_task_test.go  mock_store_test.go  test.cluster  test_debug.txt  test_helpers_test.go  test_output.txt  test_output_2.txt  test_output_v2.txt  test_output_v3.txt  test_output_v4.txt  test_output_v5.txt  test_output_v6.txt  trace.127.0.0.1.4500.1754841933.ne58Az.0.1.xml  trace.127.0.0.1.4500.1755913501.R9om9I.0.1.xml  trace.127.0.0.1.4500.1764986933.e2m7Kk.0.1.xml  trace.127.0.0.1.4500.1764989311.ZYvwMy.0.1.xml  trace.127.0.0.1.4500.1765001357.JZbLdX.0.1.xml  trace.127.0.0.1.4500.1765006560.GwAcIk.0.1.xml  trace.127.0.0.1.4500.1765040231.Bv9LeH.0.1.xml  (+4 more)
apps/concretedb/: BACKUPS.md  README.md  backup_integration_test.go  go.mod  go.sum  handlers.go  handlers_backup.go  handlers_coverage_errors_test.go  handlers_coverage_test.go  handlers_pitr.go  handlers_streams.go  handlers_streams_coverage_test.go  handlers_test.go  (+18 more)
apps/concretesearch/: Cargo.toml  README.md  go.mod
apps/concretesearch/src/: api.rs  fdb_directory.rs  main.rs  probe.rs  test_utils.rs
kms/: kms.go
models/: models.go
store/: fdb.go  fdb_benchmark_test.go  fdb_helpers_test.go  fdb_test.go  store.go  verification_test.go
(+228 files in other folders)
