[package]
name = "concretesearch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
foundationdb = { version = "0.9", features = ["fdb-7_3"] } # Pinning to system FDB 7.3
futures = "0.3"
tempfile = "3.10"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
lazy_static = "1.4"
base64 = "0.22"

[dev-dependencies]
mockall = "0.11"
tower = { version = "0.4", features = ["util"] } # For Axum tests
